SONAR-26417 Migrate RuleIndex to the ES8 Java Api Client methods
Co-authored-by: Emma Mansalier <emma.mansalier@sonarsource.com>
Co-authored-by: Matteo Mara <matteo.mara@sonarsource.com>